# invisibool

./: .dockerignore  .gitleaks.toml  Cargo.toml  Dockerfile.dev  bench-baseline.json  deny.toml  docker-compose.yml
.github/workflows/: ci.yml
crates/invisibool/: Cargo.toml
crates/invisibool-engine/: Cargo.toml
crates/invisibool-engine/benches/: scrub.rs
crates/invisibool-engine/benches/fixtures/: README.md  prose_2kb.txt  source_64kb.rs
crates/invisibool-engine/examples/: gen_bench_fixtures.rs  m0b_demo.rs
crates/invisibool-engine/src/: engine.rs  idempotence.rs  lib.rs
crates/invisibool-engine/src/detection/: exact.rs  mod.rs  pattern.rs
crates/invisibool-engine/src/keychain/: mod.rs  os.rs
crates/invisibool-engine/src/tokenizer/: alphabet.rs  fpe.rs  mac.rs  mod.rs  reserved.rs  session.rs
crates/invisibool-engine/src/vault/: mod.rs  path.rs
crates/invisibool-engine/tests/: leak_harness.rs
crates/invisibool-engine/tests/fixtures/: README.md
crates/invisibool/src/: main.rs
crates/invisibool/src/cli/: args.rs  commands.rs  mod.rs  secret_input.rs
demo/: m0a.sh  m0b.sh
docs/: ARCHITECTURE.md  M0b_GATE_REVIEW.md  PRIOR_ART.md  RUNBOOK_baseline_refresh.md  THREAT_MODEL.md
scripts/: bench-emit-baseline.py  bench-regression.py
