[workspace]
resolver = "2"
members = [
    "crates/invisibool-engine",
    "crates/invisibool",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
# MSRV reflects the RUNTIME dependency floor only. The RustCrypto stack
# we depend on (block-buffer, crypto-common 0.2, digest 0.11, hmac 0.13,
# sha2 0.11, zeroize 1.9, and several adjacent crates) all declare
# rust-version = "1.85", which is also the Rust 2024 edition release.
# Anyone who installs the binary or links the library only needs a
# 1.85+ toolchain. Contributors who run `cargo test` or `cargo bench`
# need Rust 1.86+ because criterion 0.8 (a dev-dependency, never in the
# shipped artifact) requires it; see the comment near `criterion` below.
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/cybugX/invisibool"
authors = ["The Invisibool Authors"]

[workspace.dependencies]
invisibool-engine = { path = "crates/invisibool-engine", version = "=0.0.0" }

# M0b engine dependencies.
#
# Each crate is justified by a specific engineering requirement. Versions
# use minor-pin caret semantics ("1.1" → ^1.1); Cargo.lock determines
# exact transitives. The lockfile is committed so `cargo update` cannot
# cross a semver-major silently.
#
# Detection:
#   aho-corasick - one precompiled automaton over registered values
#   regex        - RegexSet pattern matcher (linear-time, non-backtracking)
#
# Tokenizer (format-preserving fake generation, per-entity dispatch):
#   fpe          - FF1 per NIST SP 800-38G. The project forbids
#                  hand-rolling cipher modes, so this crate is mandated.
#   hmac + sha2  - HMAC-SHA-256 for MAC-tagged self-authenticating fakes
#   subtle       - constant-time equality on MAC tails
#
# Memory safety of secret material (in-memory wipe + non-leaking wrappers):
#   secrecy      - `Secret<T>` wrapper; never logged, never Debug-printed
#   zeroize      - wipe plaintext from memory on drop (derive feature for
#                  Zeroize / ZeroizeOnDrop on internal types)
#
# Serialization (session-map serialize hooks for the M1 watch daemon;
# no on-disk artifact in the engine itself):
#   serde + serde_json
#
# Benchmarks (latency-budget enforcement) - engine-only dev-dependency:
#   criterion    - declares MSRV 1.86 (higher than the consumer-facing
#                  workspace MSRV of 1.85). This is intentional: criterion
#                  is a developer tool that never ships, so a higher
#                  bench-side floor does not affect anyone installing or
#                  linking the crate. If criterion drops below 1.85 again,
#                  this note becomes a no-op.
aho-corasick = "1.1"
regex = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fpe = "0.6"
# `aes` provides the Aes256 type passed as FF1's block cipher generic.
# fpe 0.6 uses cipher 0.4 transitively, so aes 0.8.x (which uses cipher 0.4)
# is the compatible major.
aes = "0.8"
hmac = "0.13"
sha2 = "0.11"
# HKDF-SHA256 derives the FF1 subkey from the vault key:
# FF1_KEY = HKDF-SHA256(salt: empty, ikm: vault_key,
# info: "invisibool-ff1-key-v1"). The versioned `info` string lets the
# derivation rotate independently of the vault key.
# Same RustCrypto major as hmac 0.13.
hkdf = "0.13"
zeroize = { version = "1.9", features = ["derive"] }
secrecy = "0.10"
subtle = "2"
criterion = "0.8"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
