[workspace]
resolver = "2"
members = [
    "crates/invisibool-engine",
    "crates/invisibool",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
# MSRV reflects the RUNTIME dependency floor only. The RustCrypto stack
# we depend on (block-buffer, crypto-common 0.2, digest 0.11, hmac 0.13,
# sha2 0.11, zeroize 1.9, and several adjacent crates) all declare
# rust-version = "1.85", which is also the Rust 2024 edition release.
# Anyone who installs the binary or links the library only needs a
# 1.85+ toolchain. Contributors who run `cargo test` or `cargo bench`
# need Rust 1.86+ because criterion 0.8 (a dev-dependency, never in the
# shipped artifact) requires it; see the comment near `criterion` below.
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/cybugX/invisibool"
authors = ["The Invisibool Authors"]

[workspace.dependencies]
invisibool-engine = { path = "crates/invisibool-engine", version = "=0.0.0" }

# M0b engine dependencies.
#
# Each crate is justified by a specific engineering requirement. Versions
# use minor-pin caret semantics ("1.1" → ^1.1); Cargo.lock determines
# exact transitives. The lockfile is committed so `cargo update` cannot
# cross a semver-major silently.
#
# Detection:
#   aho-corasick - one precompiled automaton over registered values
#   regex        - RegexSet pattern matcher (linear-time, non-backtracking)
#
# Tokenizer (format-preserving fake generation, per-entity dispatch):
#   fpe          - FF1 per NIST SP 800-38G. The project forbids
#                  hand-rolling cipher modes, so this crate is mandated.
#   hmac + sha2  - HMAC-SHA-256 for MAC-tagged self-authenticating fakes
#   subtle       - constant-time equality on MAC tails
#
# Memory safety of secret material (in-memory wipe + non-leaking wrappers):
#   secrecy      - `Secret<T>` wrapper; never logged, never Debug-printed
#   zeroize      - wipe plaintext from memory on drop (derive feature for
#                  Zeroize / ZeroizeOnDrop on internal types)
#
# Serialization (session-map serialize hooks for the M1 watch daemon;
# no on-disk artifact in the engine itself):
#   serde + serde_json
#
# Benchmarks (latency-budget enforcement) - engine-only dev-dependency:
#   criterion    - declares MSRV 1.86 (higher than the consumer-facing
#                  workspace MSRV of 1.85). This is intentional: criterion
#                  is a developer tool that never ships, so a higher
#                  bench-side floor does not affect anyone installing or
#                  linking the crate. If criterion drops below 1.85 again,
#                  this note becomes a no-op.
aho-corasick = "1.1"
regex = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fpe = "0.6"
# `aes` provides the Aes256 type passed as FF1's block cipher generic.
# fpe 0.6 uses cipher 0.4 transitively, so aes 0.8.x (which uses cipher 0.4)
# is the compatible major.
aes = "0.8"
hmac = "0.13"
sha2 = "0.11"
# HKDF-SHA256 derives the FF1 subkey from the vault key:
# FF1_KEY = HKDF-SHA256(salt: empty, ikm: vault_key,
# info: "invisibool-ff1-key-v1"). The versioned `info` string lets the
# derivation rotate independently of the vault key.
# Same RustCrypto major as hmac 0.13.
hkdf = "0.13"
zeroize = { version = "1.9", features = ["derive"] }
secrecy = "0.10"
subtle = "2"
# AEAD for the vault file at rest. The project's permitted AEAD stack
# is `aes-gcm` or `chacha20poly1305`; the vault picks XChaCha20-Poly1305
# (192-bit nonce, in the same `chacha20poly1305` crate as the standard
# 96-bit ChaCha variant) so random per-encrypt nonces are collision-free
# in practice without persisting a counter. Audit-grade: used by Signal,
# age, libsodium. Same RustCrypto cipher 0.4 transitive as aes 0.8.
chacha20poly1305 = "0.10"
# OS CSPRNG for vault-key generation (handed to keychain::fetch_or_create)
# and per-encrypt nonce generation. The vault module wraps every call in
# a panic-on-error helper because a non-random nonce or key is
# catastrophic; getrandom returning Err is treated as an unrecoverable
# system failure that terminates the process.
getrandom = "0.3"
# OS keychain backend (macOS Security framework, Windows Credential
# Manager, Linux DBus Secret Service). v3.6.3 verified: per-platform
# error mapping for each shipped backend (macos / windows /
# secret_service) correctly distinguishes NoEntry from
# NoStorageAccess + PlatformFailure, satisfying the keychain trait
# contract that empty-slot must be Ok(None) and locked/error must be
# Err(_). The `linux-native` (keyutils) feature is explicitly NOT
# enabled - keyutils collapses AccessDenied / KeyRevoked / KeyExpired
# into NoEntry, which would trip fetch_or_create's generate-and-
# overwrite path and orphan the user's vault.
#
# Two-layer guard against accidentally enabling keyutils later:
#   (1) Build-time signal for the passthrough path. invisibool-engine
#       declares a `linux-native` passthrough feature that forwards to
#       `keyring/linux-native`; a `compile_error!` in
#       crates/invisibool-engine/src/keychain/os.rs fires the moment
#       it is enabled. Catches enables that go through our crate.
#   (2) Authoritative cross-path block. A `[[bans.features]]` rule in
#       deny.toml denies keyring's `linux-native`,
#       `linux-native-sync-persistent`, and `linux-native-async-persistent`
#       features regardless of how they got enabled. Enforced by CI's
#       per-target deny loop. Catches the direct-Cargo.toml-edit path
#       that the passthrough cannot see (Rust cfg only checks the
#       current crate's features, not transitive crates').
#
# Linux build dependency: the `sync-secret-service` feature pulls
# `dbus-secret-service` -> `dbus` -> `libdbus-sys`, which links
# `libdbus-1` via pkg-config. Building on Linux from source requires
# `libdbus-1-dev` + `pkg-config` (Ubuntu/Debian) or the equivalent
# `dbus-devel` package. macOS uses Security framework and Windows
# uses Credential Manager; both are OS-native and need no extra dep.
# CI's Linux jobs apt-get install it before `cargo {check, test,
# clippy, bench}`; see .github/workflows/ci.yml.
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "apple-native", "windows-native"] }
# CLI argument parsing. Default features pared down: drop `suggestions`
# (pulls in `strsim` and emits "did you mean ...?" hints — nice for
# UX but extra surface) and `color` (cosmetic; CI logs are noisy
# enough). Kept: `std` (required for non-no_std builds), `help`,
# `usage`, `error-context`, and `derive` (the proc-macro API we use).
# If a future chunk needs the dropped features it adds them with a
# rationale comment here, NOT silently.
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
# TTY no-echo prompt for the `register` secret-input path. Used only
# when stdin is a terminal; piped stdin bypasses this and goes
# straight to the `Zeroizing<String>` reader. Implementation is
# tiny (~200 lines): per-platform termios off / Win32 console mode
# toggle, then read until newline.
rpassword = "7"
criterion = "0.8"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
