[package]
name = "invisibool-engine"
description = "Detection, tokenization, and vault primitives for Invisibool. Surface-agnostic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aes = { workspace = true }
aho-corasick = { workspace = true }
fpe = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
regex = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

# `harness = false` because the bench file calls `criterion_main!`. Without
# this flag Cargo links libtest's default harness in addition, and Criterion
# emits a runtime panic at startup.
[[bench]]
name = "scrub"
harness = false

[lints]
workspace = true
